--- a/SLWeiBo/SLWeiBo/Classes/Profile/Storyboard/Profile.storyboard
+++ b/SLWeiBo/SLWeiBo/Classes/Profile/Storyboard/Profile.storyboard
@@ -10,7 +10,7 @@
             <objects>
                 <navigationController id="gGi-yv-NQ2" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="我" image="tabbar_profile" id="ACC-dW-RxQ"/>
-                    <navigationItem key="navigationItem" title="我" id="PGt-V6-c6w"/>
+                    <navigationItem key="navigationItem" id="PGt-V6-c6w"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="05G-kX-Crh">
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-1002" y="819"/>
         </scene>
-        <!--Profile Table View Controller-->
+        <!--我-->
         <scene sceneID="bm8-z7-cpi">
             <objects>
                 <tableViewController id="t2W-vf-OyG" customClass="ProfileTableViewController" customModule="SLWeiBo" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,7 +38,7 @@
                                 <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sch-Vn-n6j" id="L1W-OI-M8J">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -48,7 +48,7 @@
                             <outlet property="delegate" destination="t2W-vf-OyG" id="IIE-3V-R4W"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="IRz-ig-lvu"/>
+                    <navigationItem key="navigationItem" title="我" id="IRz-ig-lvu"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W7m-OY-i9S" userLabel="First Responder" sceneMemberID="firstResponder"/>
