--- a/SLWeiBo/SLWeiBo/Classes/Home/Storyboard/QRCode.storyboard
+++ b/SLWeiBo/SLWeiBo/Classes/Home/Storyboard/QRCode.storyboard
@@ -73,14 +73,30 @@
                                     <constraint firstItem="nyO-Ha-4aQ" firstAttribute="top" secondItem="zAV-qh-4Fq" secondAttribute="top" id="hya-uw-h8Z"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eq0-lS-m3U">
+                                <rect key="frame" x="265.5" y="420" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Wtv-PU-r3n"/>
+                                    <constraint firstAttribute="width" constant="70" id="mxW-CE-cwv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="我的名片">
+                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="fpQ-ax-XOH" kind="show" id="smT-Lu-KDb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="0f5-Pj-XXq" secondAttribute="trailing" id="FMq-n5-cvO"/>
                             <constraint firstItem="0f5-Pj-XXq" firstAttribute="leading" secondItem="psf-Ts-HSl" secondAttribute="leading" id="Hsh-jG-hpt"/>
                             <constraint firstItem="WEd-iG-oav" firstAttribute="top" secondItem="0f5-Pj-XXq" secondAttribute="bottom" id="NjI-hj-w6q"/>
+                            <constraint firstItem="eq0-lS-m3U" firstAttribute="centerX" secondItem="psf-Ts-HSl" secondAttribute="centerX" id="Tce-9d-nje"/>
                             <constraint firstItem="zAV-qh-4Fq" firstAttribute="centerY" secondItem="psf-Ts-HSl" secondAttribute="centerY" id="cSg-hX-Bfr"/>
                             <constraint firstItem="zAV-qh-4Fq" firstAttribute="centerX" secondItem="psf-Ts-HSl" secondAttribute="centerX" id="qMz-Kf-Cpx"/>
+                            <constraint firstItem="eq0-lS-m3U" firstAttribute="top" secondItem="zAV-qh-4Fq" secondAttribute="bottom" constant="20" id="sv7-8t-28k"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="扫一扫" id="mmz-I2-yvp">
@@ -106,6 +122,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7cu-y3-FHt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="318" y="194"/>
+        </scene>
+        <!--Code Create View Controller-->
+        <scene sceneID="o51-od-Il5">
+            <objects>
+                <viewController id="fpQ-ax-XOH" customClass="QRCodeCreateViewController" customModule="SLWeiBo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vnS-mn-IKX"/>
+                        <viewControllerLayoutGuide type="bottom" id="bqW-vf-Zhl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uLf-De-BPl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ewp-zs-0OZ">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Bi-cd-Ks7">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="NZ4-9t-osG"/>
+                                            <constraint firstAttribute="width" constant="200" id="hYM-or-dG4"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ewp-zs-0OZ" firstAttribute="centerX" secondItem="uLf-De-BPl" secondAttribute="centerX" id="4Ku-td-III"/>
+                            <constraint firstItem="ewp-zs-0OZ" firstAttribute="centerY" secondItem="uLf-De-BPl" secondAttribute="centerY" id="c65-FG-kAV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scanLineContainerView" destination="5Bi-cd-Ks7" id="k9z-Ln-qGY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mx6-M7-dlw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="967" y="194"/>
         </scene>
     </scenes>
     <resources>
