--- a/SLWeiBo/SLWeiBo/Classes/OAuth/OAuth.storyboard
+++ b/SLWeiBo/SLWeiBo/Classes/OAuth/OAuth.storyboard
@@ -20,6 +20,9 @@
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KAx-zZ-1gF">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="6dS-5V-8iN" id="RuO-Xl-SKz"/>
+                                </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
